[metadata]
name = pyorg
version = attr: pyorg.__version__
description = Package for working with Emacs org-mode files
long_description = file: README.md
author = Jared Lumpe
author_email = 'mjlumpe@gmail.com
url = https://github.com/jlumpe/pyorg


[options]
python_requires = >=3.5

install_requires =
	python-emacs~=0.1

setup_requires =
	pytest-runner

tests_require =
	pytest

packages = find:

include_package_data = true


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests pyorg

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
